--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,20 @@ h2{
     font-size: 50px;
     text-transform: uppercase;
 }
+.dop{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.button{
+    width: 250px;
+    height: 125px;
+    background-color: tan;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.button_text{
+    color: cadetblue;
+    font-weight: bold;
+}
